--- a/src/makefile
+++ b/src/makefile
@@ -1,17 +1,17 @@
 WARNINGS = -Wall
 DEBUG = 
-CFLAGS = $(WARNINGS) -std=c++0x -I/usr/local/include -L/usr/local/lib
+CFLAGS = -std=c++0x -I/usr/local/include -L/usr/local/lib
 OBJS = $(patsubst ./%.cpp, ../objs/%.o, $(shell find . -type f -name "*.cpp" ))
 EXECNAME = super-rogue
-LIBS = -lSDL_ttf -lSDL_image -lSDL
+LIBS = -lglfw -lGLEW -lGL
 
 ../objs/%.o: ./%.cpp ./%.hpp
 	@mkdir ../objs -p
-	g++ -c -o $@ $< $(CFLAGS) $(DEBUG)
+	g++ -c -o $@ $< $(WARNINGS) $(CFLAGS) $(DEBUG)
 
 ../$(EXECNAME): $(OBJS)
-	g++ -o $@ $^ $(CFLAGS) $(LIBS)
-	cd .. && ./super-rogue
+	g++ -o $@ $^ $(WARNINGS) $(CFLAGS) $(LIBS)
+	#cd .. && ./super-rogue
 
 clean:
 	-rm -rf ../objs ../$(EXECNAME)
