--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 WARNINGS = -Wall
-DEBUG = 
+AFLAGS = -g
 CFLAGS = -std=c++0x -I/usr/local/include
 OBJS = $(patsubst ./%.cpp, ../objs/%.o, $(shell find . -type f -name "*.cpp" ))
 EXECNAME = super-rogue
@@ -7,7 +7,7 @@ LIBS = -lglfw -lGLEW -lGL
 
 ../objs/%.o: ./%.cpp ./%.hpp
 	@mkdir ../objs -p
-	g++ -c -o $@ $< $(WARNINGS) $(CFLAGS) $(DEBUG)
+	g++ -c -o $@ $< $(WARNINGS) $(CFLAGS) $(AFLAGS)
 
 ../$(EXECNAME): $(OBJS)
 	g++ -o $@ $^ $(WARNINGS) $(CFLAGS) $(LIBS)
